# rocketchat-mcp

./: .gitignore  NOTICE  PROJECTDETAILS.md  README.md  glama.json  pyproject.toml  rocketchat.py  server.json
.github/workflows/: publish.yml
