[project]
name = "rocketchat-mcp"
version = "0.1.0"
description = "MCP server for Rocket.Chat — send and read messages, DMs, search, files, and channels over stdio"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "millerchou" }]
keywords = ["mcp", "model-context-protocol", "rocketchat", "rocket-chat", "llm", "ai", "chat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
]

[project.urls]
Homepage = "https://github.com/millerchou/rocketchat-mcp"
Repository = "https://github.com/millerchou/rocketchat-mcp"
Issues = "https://github.com/millerchou/rocketchat-mcp/issues"

[project.scripts]
rocketchat-mcp = "rocketchat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["rocketchat.py"]
